<resources>
    <string name="app_name">融教授</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="home">首页</string>
    <string name="find">发现</string>
    <string name="set">我的</string>
    <string name="set_msg">消息推送</string>
    <string name="msg_center">消息中心</string>
    <string name="msg_detail">重要公告</string>
    <string name="feedback">意见反馈</string>
    <string name="id_infor">个人信息</string>
    <string name="friend">朋友圈</string>

    <string name="main_search">搜索最新金融口子,中介广告</string>
    <string name="main_item_more_title">最新金融口子</string>
    <string name="main_item_more">更多</string>


    <string name="find_item_fcycle">金融中介朋友圈</string>
    <string name="find_item_lao">网赚思维</string>
    <string name="find_item_fun">最新金融口子</string>
    <string name="set_item">登陆/注册</string>


    <string name="card_title">办卡专区</string>
    <string name="card_once_query">立刻查询</string>
    <string name="balance">热门银行</string>
    <string name="query_all_balance">查看全部银行</string>
    <string name="all_balance">全部银行</string>
    <string name="card_pro">办卡进度</string>
    <string name="card_hot">本期力荐卡</string>
    <string name="loan_title">网贷专区</string>
    <string name="import_title">提额专区</string>
    <string name="import_start">开始</string>
    <string name="import_key">一键提额</string>
    <string name="import_at_once">立即申请提额</string>
    <string name="import_key_des">(实时查看可提额度)</string>

    <string name="set_title">设置</string>
    <string name="set_commit">提交</string>


    <string name="apply_con">申请条件</string>
    <string name="apply_material">所需材料</string>
    <string name="apply_notice">注意事项</string>
    <string name="apply_once">立即申请</string>
    <string name="apply_rate">成功率:</string>


    <string name="login">登录</string>
    <string name="set_login_out">退出登录</string>
    <string name="login_normal">普通登录</string>
    <string name="login_dynamic">动态验证码登录</string>
    <string name="input_phone">请输入手机号</string>
    <string name="input_password">请输入登陆密码</string>
    <string name="input_password_set">请设置登陆密码</string>
    <string name="input_password_entry">请确认登陆密码</string>
    <string name="forget_password">忘记登录密码？</string>
    <string name="get_dynamic">获取验证码</string>
    <string name="input_dynamic">请输入验证码</string>
    <string name="input_register">请输入注册码（必填）</string>
    <string name="get_register">注册码请联系融教授平台代理商获取哦！</string>
    <string name="next">下一步</string>
    <string name="vip_login">会员直接登录 ></string>
    <string name="agree">同意</string>
    <string name="agreement"> 《融教授服务条款》</string>
    <string name="send_dynamic_success">验证码发送成功</string>
    <string name="send_dynamic_fail">验证码发送失败，请重试</string>
    <string name="login_error">用户名或密码错误</string>
    <string name="login_fail">登陆失败</string>

    <string name="register">注册</string>
    <string name="register_password">设置登录密码</string>
    <string name="register_password_describe">登录密码至少6个字符</string>
    <string name="register_finish">注册成功</string>
    <string name="go_home">去首页</string>
    <string name="register_success">恭喜你，注册成功</string>


    <string name="set_ps">密码修改</string>
    <string name="phone">手机号</string>
    <string name="set_add">添加</string>
    <string name="set_contact">联系方式:</string>
    <string name="feedback_hind">您对融教授app的任何宝贵以及那都可以反馈给我们(100字以内)</string>


    <string name="hot_loan">热门网贷</string>

    <string name="planner_start">哈喽,同学你好,想学习更多关于网贷、办卡、提额的技术么？留下你的微信、QQ、手机号码。老师会把免费的教程和素材发给你哦！</string>

    <!--办卡二级界面-->
    <string name="card_primer">新手入门</string>
    <string name="card_how">如何选卡</string>
    <string name="card_god">卡神之路</string>

    <!--网贷二级界面-->
    <string name="loan_strategy">网贷攻略</string>
    <string name="loan_apply">申请资料详解</string>
    <string name="loan_apply_detail">针对常见的申请资料，网贷机构是如何考察的？有哪些改善技巧？融教授为您一一解析。</string>

    <string name="msg_sys">[系统公告]</string>

    <string name="balance_query_title">银联跨行交易查询</string>
    <string name="balance_query_content">只需卡号、金额、日期、急速查询单笔刷卡交易的明细</string>
    <string name="mcc_title">MCC宝典</string>
    <string name="mcc_content">快速查询每个MCC对应的行业、是否有积分</string>


    <string name="online">在线一键提额</string>
    <string name="online_once">立即进行提额操作</string>
    <string name="online_phone">电话提额</string>
    <string name="online_wei">微信提额</string>
    <string name="online_msg">短信提额</string>

    <string name="zhao_call">拨打4008205555  >  输入身份证号并按#  >  输入查询密码并按#  >  按2（快速查询额度及调整、现金分期）  >  按3（额度调整申请）  >按1（临时额度快速申请）/按2（固定额度快速申请）</string>
    <string name="zhao_call_warn">调整周期：每三个月即可成功申请一次</string>
    <string name="zhao_phone">4008205555</string>
    <string name="zhao_online">https://ccclub.cmbchina.com/mca/MPreContract.aspx?cardsel=uc&amp;from=wx&amp;WT.mc_id=N1700WX304A9033100CC&amp;where=&amp;swbrief=&amp;channel=WX&amp;openid=jVxgtCop23IvM4Nar98lwwtSFiNXBM7iFlBK5rYGjWQ%3D</string>


    <string name="pu_call">拨打4008208788  >  输入身份证号并按#  >  输入查询密码并按#  >  按1（额度调整及账务查询）>  按7（额度调整）按1（固定额度调整）/按2（临时额度调整）</string>
    <string name="pu_phone">4008208788</string>
    <string name="pu_online">https://ecentre.spdbccc.com.cn/creditcard/indexActivity.htm?data=806627335</string>

    <string name="guang_call">拨打95508  >  输入电话服务密码  >  按1 （查账还款及额度调整）  >按2（额度调整）  >  按1（申请临时额度）/按2（申请永久额度）</string>
    <string name="guang_call_warn">调额周期：最快每三个月即可成功申请一次</string>
    <string name="guang_wei">微信关注公众号：“广发信用卡”，进入后，点击“我的服务”，  >  “我要分期/现金”  >  “大额现金分期”，还可以申请不占用额度的现金分期。</string>
    <string name="guang_phone">95508</string>
    <string name="guang_online">http://cgbchina.cn/BKbH45Q</string>

    <string name="xin_call">拨打4008895558  >  输入证件号并按#  >  按0（人工服务）  >  按7（其他业务）</string>
    <string name="xin_call_warn">可申请固定额度和临时额度</string>
    <string name="xin_phone">4008895558</string>
    <string name="xin_msg">发送“LT卡号后4位身份证后6位”至106980095558，例如LT1109240276。</string>
    <string name="xin_wei">微信关注公众号“中信银行信用卡”，进入后，点击“办卡/分期”  >  “我要借款”，可以申请超过固定额度的现金分期。</string>
    <string name="xin_msg_worn">只可申请临时额度</string>
    <string name="xin_msg_phone">106980095558</string>
    <string name="xin_online">https://creditcard.ecitic.com/citiccard/newwap/pages/AppCreditCard/applayCard-process.html?sid=SJTJBK&amp;pid=CS0141&amp;cid=TJ25307348</string>


    <string name="jiao_call">拨打4008009888  >  输入查询密码并按#  >  按1（继续其他服务）  >  按2（快速查询额度及调整）  >  按1（额度调整）/按2（好享贷额度查询）只可申请临时额度调整</string>
    <string name="jiao_call_warn">注：好享贷额度是不占用固定额度的额外的分期额度</string>
    <string name="jiao_phone">4008009888</string>

    <string name="min_call">拨打4006695568  >  按1（中文服务）  >  按2（额度查询调整）  >  输入查询密码  >  按2（临时额度调整）/按3（固定额度调整）</string>
    <string name="min_phone">4006695568</string>
    <string name="min_online">https://creditcard.cmbc.com.cn/wsonline/index/index.jhtml?encryptStr=NKU8vmCmKNrtKXmE9jgowDxMd3u3eBCfN8iws97x+vNhzJeunREzvd9OLb246AbtimR81mDiXInWlZErtgqwH1u053Q3VX85Cr5PQs6h9Lkh0HoGWr2jzjSzuMhv/VTntEocdH2ZIPgHMSu/BE+xR3rGFscYwIL4ayVhoV+m3TQ=</string>

    <string name="ping_call">拨打95511  >  按2（信用卡业务）  >  输入查询密码并按#  >  按3（临时额度及固定额度申请）  >按1（临时额度申请）/按2（固定额度申请）</string>
    <string name="ping_phone">95511</string>
    <string name="ping_online">https://c.pingan.com/apply/mobile/apply/index.html?scc=920000002&amp;ccp=9a1a2a3a4a5a8a10a11a12a13&amp;xl=01a02a03a04a05&amp;showt=1#mainPage</string>

    <string name="xing_call">拨打95561  >  按1（信用卡）  >  按8（人工服务）</string>
    <string name="xing_call_warn">调整周期：最快每三个月即可成功申请一次</string>
    <string name="xing_phone">95561</string>
    <string name="xing_online">https://wm.cib.com.cn/application/cardapp/cappl/ApplyCard/toSelectCard?id=efab129137844558bdc5dfb25e2127cd&amp;from=singlemessage&amp;isappinstalled=0</string>

    <string name="gong_call">拨打95588 按语音提示转人工服务</string>
    <string name="gong_call_warn">可申请固定额度和临时额度</string>
    <string name="gong_phone">95588</string>
    <string name="gong_online" formatted="false">http://www.icbc.com.cn/ICBC/%e5%b9%bf%e5%91%8a%e9%a1%b5%e9%9d%a2/%e7%bd%91%e7%ab%99%e5%ae%a3%e4%bc%a0%e5%b9%bf%e5%91%8a%e9%a1%b5%e9%9d%a2/%e7%bd%91%e7%ab%99%e5%b9%bf%e5%91%8a%e9%a1%b5%e9%9d%a2/2012/0326_%e6%96%b0%e7%89%88%e4%bf%a1%e7%94%a8%e5%8d%a1%e7%bd%91%e4%b8%8a%e5%8a%9e%e5%8d%a1%e5%ae%a3%e4%bc%a0/%e6%96%b0%e7%89%88%e4%bf%a1%e7%94%a8%e5%8d%a1%e7%bd%91%e4%b8%8a%e5%8a%9e%e5%8d%a1%e5%ae%a3%e4%bc%a0.htm</string>

    <string name="zhong_call">拨打4006695566  >  按0（人工）  >  按3（额度调整）</string>
    <string name="zhong_call_warn">可申请临时额度和固定额度；部分地区，固定额度需要十个工作日出结果，一年只能调整一次</string>
    <string name="zhong_phone">4006695566</string>
    <string name="zhong_online">https://apply.mcard.boc.cn/apply/mobile/product/familyProductList/family</string>


    <string name="nong_call">拨打4006695599  >  输入身份证号#  >  输入查询密码#  >  按1（账单及信用额度服务）  >  按8（临时额度调整），可调整临时额度。\n拨打4006695599  >  输入身份证号#  >  输入查询密码#  >  按0（人工），可申请固定额度</string>
    <string name="nong_phone">4006695599</string>
    <string name="nong_online">http://abccc.vfengche.cn/memu/card/page1.html</string>

    <string name="jian_call">拨打4008200588  >  输入身份证号并按#  >  输入电话服务密码#  >  按0（人工）</string>
    <string name="jian_phone">4008200588</string>
    <string name="jian_call_warn">可申请固定额度和临时额度。</string>
    <string name="jian_msg">发送“CCTE#卡号后4位#申请提升的额度”至95533。</string>
    <string name="jian_msg_warn">只可申请临时额度。</string>
    <string name="jian_msg_phone">95533</string>
    <string name="jian_online">http://creditcard.ccb.com/cn/creditcard/apply/wechat/apply.html?SID=SNS&amp;wParam=QMerSTmogaHKx%2FJD4S7Cw6tDYFENAeQw8rlXBcbI9iuMVi0Q7stBbI1BNVh4qllEJ2ScXQ3OOfqlMHVqVrXoMKgNL7bpKNOpgYAla3%2BtWynVWbkCaMmkxfUqhvWLCerYXtxz9vSD0eyMrHoPhA50s0KiKdUJ7tJBCSsMWur9ciKSk%2B%2FFW%2BAFybQkFYJyFB2R5QQMTSjiTrs%3D</string>

    <string name="guangd_call">拨打4007888888  >  按1（自助语音服务）  >  输入卡号末4位并按#  >  按7（额度调整）  >  输入交易密码并按#   >  按1（申请提升固定额度）/按2（申请提升临时额度）</string>
    <string name="guangd_phone">4007888888</string>
    <string name="guangd_online">https://xyk.cebbank.com/cebmms/apply/ps/card-list.htm?pro_code=ZHTG03ZDTGSJ001C2C&amp;c2c_recom_flag=43178036</string>

    <string name="hua_call">拨打4006695577  >  输入身份证号并按#  >  输入查询密码并按#  >  按0（人工服务）</string>
    <string name="hua_phone">4006695577</string>
    <string name="hua_online">https://creditapply.hxb.com.cn/weixin/cardChoice.html</string>

    <string name="net_error">网络连接错误,请稍后再试</string>
    <string name="no_more">没有更多数据了</string>
    <string name="attention">注意</string>
    <string name="no_register">注册码无效,注册失败!</string>
    <string name="register_fail">注册失败!</string>
    <string name="register_has">注册失败,账号已经存在!</string>
    <string name="psd_fail">设置密码失败</string>
    <string name="psd_change">修改密码</string>
    <string name="psd_change_succ">恭喜你,密码修改成功</string>
    <string name="psd_different">两次密码不一致</string>
    <string name="psd_fail_reason">账户不存在</string>

    <string name="temp_register">此注册码为使用码,体验两小时后失效</string>

</resources>
