<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:divider="@drawable/divider_line"
    android:showDividers="middle"
    android:background="@color/text_home_item_cut"
    tools:context="finance.com.fp.ui.LoginActivity">

    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"

        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_marginBottom="@dimen/title_cut_height"
        android:background="@color/white"
        android:gravity="center"
        app:navigationIcon="@mipmap/icon_red_back">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="@color/text_home_more_text"
            android:textSize="@dimen/app_title_size" />

    </android.support.v7.widget.Toolbar>


    <LinearLayout style="@style/login_ll">

        <ImageView
            style="@style/login_img"
            android:src="@mipmap/login_register_phonenumber" />

        <EditText

            android:inputType="number"
            android:id="@+id/et_user"
            style="@style/login_edit"
            android:hint="@string/input_phone" />
    </LinearLayout>

    <LinearLayout style="@style/login_ll">

        <ImageView
            style="@style/login_img"

            android:src="@mipmap/login_register_code" />

        <EditText
            android:inputType="number"
            android:id="@+id/et_pasword"
            style="@style/login_edit"
            android:hint="@string/input_dynamic" />

        <Button
            android:id="@+id/bt_dynamic"
            style="@style/login_bt_dynamic"

            android:text="@string/get_dynamic" />
    </LinearLayout>

    <EditText
        android:layout_marginStart="0dp"
        android:id="@+id/et_register"
        android:layout_weight="0"
        android:layout_width="match_parent"
        android:padding="@dimen/app_margin_ends"
        style="@style/login_edit"
        android:inputType="textEmailAddress"
        android:background="@color/white"
        android:hint="@string/input_register" />
    <TextView
        android:gravity="center"
        android:layout_marginStart="0dp"
        android:layout_weight="0"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:padding="@dimen/app_margin_ends"
        style="@style/login_edit"
        android:text="@string/get_register" />
    <Button
        android:id="@+id/bt_login"
        style="@style/login_btn"
        android:text="@string/next" />


    <Button
        android:id="@+id/bt_forget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginEnd="@dimen/app_margin_ends"
        android:background="@null"
        android:textColor="@color/colorPrimaryDark"
        android:padding="0dp"
        android:text="@string/vip_login" />


    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content">

        <CheckBox
            android:layout_marginBottom="40dp"
            android:id="@+id/cb_agree"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/set_item"
            android:text="@string/agree"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agreement"
            android:textColor="@color/colorPrimaryDark"
            />

    </LinearLayout>



</LinearLayout>
