<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context="finance.com.fp.ui.LoginActivity">

    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"

        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_marginBottom="@dimen/title_cut_height"
        android:background="@color/white"
        android:gravity="center"
        app:navigationIcon="@mipmap/icon_red_back">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/text_home_more_text"
            android:textSize="@dimen/app_title_size" />

    </android.support.v7.widget.Toolbar>

    <RadioGroup
        android:id="@+id/rg"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_marginBottom="@dimen/app_cut_big"
        android:layout_marginTop="@dimen/app_cut_big"
        android:background="@color/white"
        android:divider="@drawable/divider_line"
        android:orientation="horizontal"
        android:showDividers="middle">

        <RadioButton
            android:id="@+id/rb_normal"
            style="@style/card_rb"
            android:layout_height="match_parent"
            android:text="@string/login_normal" />

        <RadioButton
            android:id="@+id/rb_dynamic"
            style="@style/card_rb"
            android:layout_height="match_parent"
            android:drawablePadding="0dp"
            android:text="@string/login_dynamic" />
    </RadioGroup>

    <LinearLayout style="@style/login_ll">

        <ImageView
            style="@style/login_img"
            android:src="@mipmap/login_user" />

        <EditText
            android:inputType="number"
            android:id="@+id/et_user"
            style="@style/login_edit"
            android:hint="@string/input_phone" />
    </LinearLayout>

    <LinearLayout style="@style/login_ll">

        <ImageView
            style="@style/login_img"

            android:src="@mipmap/login_code" />

        <EditText
            android:id="@+id/et_pasword"
            style="@style/login_edit"
            android:hint="@string/input_password" />

        <Button
            android:id="@+id/bt_dynamic"
            style="@style/login_bt_dynamic"
            android:text="@string/get_dynamic" />
    </LinearLayout>


    <Button
        android:id="@+id/bt_login"
        style="@style/login_btn"
        android:text="@string/login" />


    <Button
        android:id="@+id/bt_forget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"

        android:layout_marginEnd="@dimen/app_margin_ends"
        android:background="@null"
        android:drawableStart="@mipmap/icon_forget"
        android:padding="0dp"
        android:text="@string/forget_password" />


</LinearLayout>
