<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">


    <TextView
        android:text="@string/online"
        style="@style/one_key_title" />

    <TextView
        android:text="@string/online_once"
        style="@style/one_key_content" />

    <Button
        android:layout_marginBottom="@dimen/app_margin_ends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@mipmap/icon_amentiontheforehead"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="@dimen/content_size"
        />

    <Button
        android:id="@+id/button"
        android:text="@string/action_settings"
        style="@style/one_key_btn"
        android:drawableStart="@mipmap/phone"
        />

</LinearLayout>