<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:divider="@drawable/divider_line"
    android:orientation="vertical"
    android:showDividers="middle"
    android:background="@color/text_home_item_cut"
    tools:context="finance.com.fp.ui.LoginActivity">

    <android.support.v7.widget.Toolbar

        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_marginBottom="@dimen/title_cut_height"
        android:background="@color/white"
        android:gravity="center"
        app:navigationIcon="@mipmap/icon_red_back">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/register_password"
            android:textColor="@color/text_home_more_text"
            android:textSize="@dimen/app_title_size" />

    </android.support.v7.widget.Toolbar>


    <LinearLayout style="@style/login_ll">

        <ImageView
            style="@style/login_img"
            android:src="@mipmap/login_register_code" />

        <EditText
            android:id="@+id/et_user"
            style="@style/login_edit"
            android:hint="@string/input_password_set"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout style="@style/login_ll">

        <ImageView
            style="@style/login_img"

            android:src="@mipmap/login_register_code" />

        <EditText
            android:id="@+id/et_pasword"
            style="@style/login_edit"
            android:hint="@string/input_password_entry"
            android:inputType="textPassword" />


    </LinearLayout>


    <Button
        android:id="@+id/bt_login"
        style="@style/login_btn"
        android:text="@string/next" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:drawableStart="@mipmap/icon_attention"
        android:text="@string/register_password_describe"
        android:textColor="@color/text_home_item" />


</LinearLayout>
