<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/app_cut_big"
        android:id="@+id/more"
        style="@style/item_style"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/import_item_one_padding"
        android:paddingLeft="@dimen/app_margin_ends"
        android:paddingRight="@dimen/app_margin_ends"
        android:paddingTop="@dimen/import_item_one_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/import_key"
            android:textColor="@color/text_home_more_text"
            android:textSize="@dimen/import_item_text_size" />
        <TextView

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/import_key_des"
            android:textColor="@color/text_home_item_time"
            android:textSize="@dimen/app_title_text_size_small" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/home_bottom_text_size"
            android:text="@string/query_all_balance"
            android:textColor="@color/text_card_item_more"
            android:textSize="@dimen/tools_text_size_home" />

        <include layout="@layout/img_more" />

    </LinearLayout>

</RelativeLayout>