<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:divider="@drawable/divider_line"
    android:orientation="vertical"
    android:showDividers="middle"
    android:background="@color/text_home_item_cut"
    tools:context="finance.com.fp.ui.LoginActivity">

    <android.support.v7.widget.Toolbar

        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_marginBottom="@dimen/title_cut_height"
        android:background="@color/white"
        android:gravity="center"
        app:navigationIcon="@mipmap/icon_red_back">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/register_finish"
            android:textColor="@color/text_home_more_text"
            android:textSize="@dimen/app_title_size" />

    </android.support.v7.widget.Toolbar>

    <ImageView
        android:layout_marginTop="@dimen/dp_thirty_five"
        android:layout_marginBottom="@dimen/dp_thirty_five"
        android:layout_gravity="center"
        android:src="@mipmap/icon_complete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/tv_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/dp_thirty_five"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/register_success"
        />
    <Button
        android:id="@+id/bt_login"
        style="@style/login_btn"
        android:text="@string/go_home" />


</LinearLayout>
